--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -471,7 +471,7 @@ $body-emphasis-color:       $black !default;
 //
 // Style anchor elements.
 
-$link-color:                              $primary !default;
+$link-color:                              $dark !default;//$primary !default;
 $link-decoration:                         none !default;//underline !default;
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
