--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -417,25 +417,33 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 // scss-docs-start spacer-variables-maps
 $spacer: 1rem !default;
 $spacers: (
-  0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer * .75,
-  4: $spacer,
-  5: $spacer * 1.25,
-  6: $spacer * 1.5,
-  7: $spacer * 1.75,
-  8: $spacer * 2,
-  9: $spacer * 2.25,
-  10: $spacer * 2.5,
-  11: $spacer * 2.75,
-  12: $spacer * 3,
   // 0: 0,
   // 1: $spacer * .25,
   // 2: $spacer * .5,
   // 3: $spacer,
   // 4: $spacer * 1.5,
   // 5: $spacer * 3,
+
+  0: 0,
+  1: $spacer * .25,  //4
+  2: $spacer * .5,   //8
+  3: $spacer * .75,  //12
+  4: $spacer,        //16
+  5: $spacer * 1.25, //20
+  6: $spacer * 1.5,  //24
+  7: $spacer * 1.75, //28
+  8: $spacer * 2,    //32
+  9: $spacer * 2.25, //36
+ 10: $spacer * 2.5,  //40
+ 11: $spacer * 2.75, //44
+ 12: $spacer * 3,    //48
+ 13: $spacer * 3.25, //52
+ 14: $spacer * 3.5,  //56
+ 15: $spacer * 3.75, //60
+ 16: $spacer * 4,    //64
+ 17: $spacer * 4.25, //68
+ 19: $spacer * 4.5,  //72
+ 20: $spacer * 4.75, //76
 ) !default;
 // scss-docs-end spacer-variables-maps
 
