complete header component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
-
 @import "../../node_modules/bootstrap/scss/functions";
 
 @import "./variables";
@@ -8,6 +7,4 @@
 @import "./utilities";
 @import "../../node_modules/bootstrap/scss/utilities/api";
 
-@import "./buttons"
-
-
+@import "./buttons";
