--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,5 +8,5 @@
 @import "../../node_modules/bootstrap/scss/utilities/api";
 
 @import "./buttons";
-@import "../component/Footer.scss";
+@import "../component/Footer/Footer.scss";
 @import "../component/Header/Header.scss";
