--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,6 +7,8 @@
 @import "./utilities";
 @import "../../node_modules/bootstrap/scss/utilities/api";
 
+@import "../style/base.scss";
+
 @import "./buttons";
 @import "../component/Footer/Footer.scss";
 @import "../component/Header/Header.scss";
