--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,5 +10,6 @@
 @import "../style/base.scss";
 
 @import "./buttons";
+@import "../page/HomePage/HomePage.scss";
 @import "../component/Footer/Footer.scss";
 @import "../component/Header/Header.scss";
