--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -656,7 +656,7 @@ $font-weight-bolder:          bolder !default;
 $font-weight-base:            $font-weight-normal !default;
 
 $line-height-base:            1.5 !default;
-$line-height-sm:              1.25 !default;
+$line-height-sm:              1.2 !default; //1.25 !default;
 $line-height-lg:              2 !default;
 
 $h1-font-size:                $font-size-base * 3 !default; //$font-size-base * 2.5 !default;
