--- a/src/page/HomePage/HomePage.scss
+++ b/src/page/HomePage/HomePage.scss
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0&icon_names=arrow_forward_ios");
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0&icon_names=arrow_back_ios");
+.homepage-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @include media-breakpoint-up(lg) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
 .banner-content {
   position: absolute;
   bottom: 0%;
@@ -49,4 +57,9 @@
     width: 40px;
     height: 40px;
   }
+}
+
+.reviewMarquee .rfm-child {
+  margin-left: 12px;
+  margin-right: 12px;
 }
