Add HomePage recomand article section

--- a/src/page/HomePage/HomePage.scss
+++ b/src/page/HomePage/HomePage.scss
@@ -59,6 +59,11 @@
   }
 }
 
+.swiper-pagination-bullet-mx-6{
+  margin-left: 6px;
+  margin-right: 6px;
+}
+
 .reviewMarquee .rfm-child {
   margin-left: 12px;
   margin-right: 12px;
