Adjust ArticleCard scss import position

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,6 +10,8 @@
 @import "../style/base.scss";
 
 @import "./buttons";
+
 @import "../page/HomePage/HomePage.scss";
 @import "../component/Footer/Footer.scss";
 @import "../component/Header/Header.scss";
+@import "../component/ArticleCard/ArticleCard.scss"; 
