--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -501,7 +501,7 @@ $icon-link-icon-transform:    translate3d(.25em, 0, 0) !default;
 //
 // Style p element.
 
-$paragraph-margin-bottom:   1rem !default;
+$paragraph-margin-bottom:   0rem !default;//1rem !default;
 
 
 // Grid breakpoints
