Add bootstrap width responsive option

--- a/src/style/_utilities.scss
+++ b/src/style/_utilities.scss
@@ -8,7 +8,13 @@ $utilities: map-merge(
           responsive: true,
         )
       ),
-    
+    "width":
+      map-merge(
+        map-get($utilities, "width"),
+        (
+          responsive: true,
+        )
+      ),
     "letter-spacing": (
       property: letter-spacing,
       class: ls,
