--- a/src/component/ReviewCard/ReviewCard.scss
+++ b/src/component/ReviewCard/ReviewCard.scss
@@ -2,3 +2,12 @@
   font-variation-settings:
     'FILL' 1,
 }
+.reviewCard-text{
+  display: -webkit-box;
+  -webkit-box-orient: vertical; 
+  overflow: hidden;             
+  -webkit-line-clamp: 3;  
+  line-clamp: 3;       
+  line-height: 1.5;             
+  height: 4.5rem;
+}
