--- a/src/component/ArticleCard/ArticleCard.scss
+++ b/src/component/ArticleCard/ArticleCard.scss
@@ -1,9 +1,14 @@
-.text-truncate-2lines{ //超過兩行就截斷
+.text-truncate-2lines {
+  //超過兩行就截斷
   display: -webkit-box;
-  -webkit-box-orient: vertical; 
-  overflow: hidden;             
-  -webkit-line-clamp: 2;  
-  line-clamp: 2;       
-  line-height: 1.5;             
-  max-height: 3em;             
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  line-height: 1.5;
+  max-height: 3em;
+}
+.article-card {
+  border: 0px;
+  border-bottom: 4px solid #fb9a39;
 }
