Adjust HomePage Style & Details

--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -29,15 +29,15 @@
   }
   .dropdown-item:hover,
   .dropdown-item:active {
-    background-color: $light;
-    color: $primary;
+    background-color: $primary;
+    color: $light;
   }
 }
 .homepage-collapse {
   .dropdown-item:hover,
   .dropdown-item:active {
-    background-color: $light;
-    color: $primary;
+    background-color: $primary;
+    color: $light;
   }
 }
 .avatar {
