Add primary-hover theme color

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -317,6 +317,7 @@ $gray_light:   #EAEAEA; // NEW
 // scss-docs-start theme-colors-map
 $theme-colors: (
   "primary":    $primary, // "primary":    $primary,
+  "primary-hover":$primary_hover,
   "secondary":  $secondary, // "secondary":  $secondary,
   "gray":       $gray, // NEW
   "gray_light": $gray_light, // NEW
