--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,6 +16,7 @@
 
 @import "../page/HomePage/HomePage.scss";
 @import "../page/ArticlePage/ArticlePage.scss";
+@import "../page/ArticleListPage/ArticleListPage.scss";
 @import "../component/Footer/Footer.scss";
 @import "../component/Navbar/Navbar.scss";
 @import "../component/ArticleCard/ArticleCard.scss"; 
