--- a/src/page/ArticleListPage/ArticleListPage.scss
+++ b/src/page/ArticleListPage/ArticleListPage.scss
@@ -10,3 +10,20 @@
     }
   }
 }
+.hot-article-pagination{
+  .page-link{
+    border: 1px solid #DFE3E8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: bold;
+    width: 32px;
+    height: 32px;
+    &.active{
+      background-color: $light;
+      color: $primary;
+      border: 1px solid $primary;
+    }
+  }
+}
