Adjust article-tag hover style

--- a/src/page/ArticleListPage/ArticleListPage.scss
+++ b/src/page/ArticleListPage/ArticleListPage.scss
@@ -3,7 +3,8 @@
     color: $dark;
     background-color: #fffaef;
     border: 0.5px solid $primary;
-    &.active {
+    user-select: none;
+    &.active,&:hover,&:focus {
       color: $light;
       background-color: $primary_hover;
       border: 0.5px solid $primary_hover;
