Adjust article-list-select width unit from px to rem

--- a/src/page/ArticleListPage/ArticleListPage.scss
+++ b/src/page/ArticleListPage/ArticleListPage.scss
@@ -47,7 +47,7 @@
 .article-list-select-wrap {
   position: relative;
   select {
-    width: 176px;
+    width: 11rem;
     background-color: #fffdfb;
     -webkit-appearance: none;
     -moz-appearance: none;
