--- a/src/page/AdminPage/adminInfo.scss
+++ b/src/page/AdminPage/adminInfo.scss
@@ -10,15 +10,51 @@
 .admin_wrap {
   background: #fdfbf5;
 }
-.admin-mobile-header_nav a {
+.admin-header_nav a {
   &:hover {
     font-weight: 700 !important;
     color: #e77605 !important;
     border-bottom: solid 2px #e77605;
+    @media (min-width: 768px) {
+      font-weight: 400 !important;
+      border: none;
+    }
   }
 }
 .admin-form_checked {
   &:checked {
     border-color: #e77605 !important;
   }
+}
+.admin-form_group {
+  @media (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    .form-label,
+    p {
+      width: 100px;
+      flex-shrink: 0;
+    }
+  }
+  @media (min-width: 1000px) {
+    .form-label,
+    p {
+      width: 176px;
+    }
+  }
+}
+.admin-form_birthday select {
+  @media (min-width: 768px) {
+    // flex: 1;
+    // min-width: 0;
+    // max-width: 33.33%;
+  }
+}
+.form-select {
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16' fill='%23E77605'%3E%3Cpath d='M7 10l5 5 5-5H7z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1.1rem center;
+  background-size: 20px;
 }
