admin-info_add component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,3 +19,4 @@
 @import "../component/Navbar/Navbar.scss";
 @import "../component/ArticleCard/ArticleCard.scss";
 @import "../page/AdminPage/adminInfo.scss";
+@import "../component/AdminMobileHeader/AdminMobileHeader.scss";
