--- a/src/page/AdminPage/AdminBackground.scss
+++ b/src/page/AdminPage/AdminBackground.scss
@@ -6,7 +6,7 @@
 .text-data_font {
   font-size: 14px;
 }
-.admin-background_dashboard {
+.admin-background_dashboardSelect {
   width: 88px;
   appearance: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='16' height='16' fill='%23E77605'%3E%3Cpath d='M7 10l5 5 5-5H7z'/%3E%3C/svg%3E");
@@ -15,10 +15,13 @@
   background-size: 20px;
 }
 .chart-wrapper {
-  overflow-x: auto; // ✅ 讓行動版支援橫向滾動
+  overflow-x: auto;
   width: 100%;
 }
 
 .chart-container {
-  min-width: 500px; // ✅ 避免圖表在小螢幕變形，讓它超出容器後可橫向捲動
+  min-width: 500px;
+}
+.clickCount_body-title {
+  max-width: 219px;
 }
