--- a/src/page/AdminPage/AdminBackground.scss
+++ b/src/page/AdminPage/AdminBackground.scss
@@ -6,6 +6,14 @@
 .text-data_font {
   font-size: 14px;
 }
+.admin-background_textData-title {
+  @media (min-width: 768px) {
+    width: 150px;
+  }
+  @media (min-width: 992px) {
+    width: 176px;
+  }
+}
 .admin-background_dashboardSelect {
   width: 88px;
   appearance: none;
@@ -14,6 +22,40 @@
   background-position: right 1rem center;
   background-size: 20px;
 }
+.admin-background_dashboard-articleTitle {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  @media (min-width: 768px) {
+    max-width: 150px;
+  }
+  @media (min-width: 1400px) {
+    max-width: 200px;
+  }
+}
+.clickCount_header {
+  grid-template-columns: 60% 20% 20%;
+  gap: 24px;
+  @media (max-width: 992px) {
+    grid-template-columns: 50% 25% 25%;
+  }
+}
+.clickCount_body li {
+  grid-template-columns: 60% 20% 20%;
+  gap: 24px;
+  @media (max-width: 992px) {
+    grid-template-columns: 50% 25% 25%;
+  }
+}
+.clickCount_body-title {
+  max-width: 219px;
+  @media (min-width: 768px) {
+    min-width: 100%;
+  }
+}
+.card {
+  flex-grow: 1;
+}
 .chart-wrapper {
   overflow-x: auto;
   width: 100%;
@@ -21,7 +63,4 @@
 
 .chart-container {
   min-width: 500px;
-}
-.clickCount_body-title {
-  max-width: 219px;
 }
