--- a/src/page/HomePage/HomePage.scss
+++ b/src/page/HomePage/HomePage.scss
@@ -91,6 +91,6 @@
 
 .hover-shadow:hover {
   transform: translateY(-1px);
-  box-shadow: .2rem .2rem .75rem rgba(#c18700, .15) ;
+  box-shadow: 0.2rem 0.2rem 0.75rem rgba(#c18700, 0.15);
   transition: all 0.2s ease-in-out;
 }
