--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -21,3 +21,4 @@
 @import "../component/ArticleCard/ArticleCard.scss";
 @import "../page/AdminPage/adminInfo.scss";
 @import "../page/AdminPage/AdminBackground.scss";
+@import "../page/BlogPage/BlogHome.scss";
