--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 @import url("https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 @import "../../node_modules/bootstrap/scss/functions";
 
@@ -22,3 +23,4 @@
 @import "../page/AdminPage/adminInfo.scss";
 @import "../page/AdminPage/AdminBackground.scss";
 @import "../page/BlogPage/BlogHome.scss";
+@import "../component/BlogPageArticleCard/Blog_ArticleCard.scss";
