--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,3 +24,4 @@
 @import "../page/AdminPage/AdminBackground.scss";
 @import "../page/BlogPage/BlogHome.scss";
 @import "../component/BlogPageArticleCard/Blog_ArticleCard.scss";
+@import "../component/AdminArticleCard/Admin_ArticleCard.scss";
