--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -16,7 +16,7 @@ $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black:    #000 !default;
+$black:    #000 !default; //#000
 // scss-docs-end gray-color-variables
 
 // fusv-disable
@@ -587,9 +587,9 @@ $border-radius-2xl:           $border-radius-xxl !default; // Deprecated in v5.3
 
 // scss-docs-start box-shadow-variables
 $box-shadow:                  .2rem .2rem .75rem rgba(#c18700, .15) !default;//0 .5rem 1rem rgba($black, .15) !default;
-$box-shadow-sm:               0 .125rem .25rem rgba($black, .075) !default;
-$box-shadow-lg:               0 1rem 3rem rgba($black, .175) !default;
-$box-shadow-inset:            inset 0 1px 2px rgba($black, .075) !default;
+$box-shadow-sm:               0 .125rem .25rem rgba(#c18700, .075) !default;
+$box-shadow-lg:               0 1rem 3rem rgba(#FBA44D, .3) !default;
+$box-shadow-inset:            inset 0 1px 2px rgba(#c18700, .075) !default;
 // scss-docs-end box-shadow-variables
 
 $component-active-color:      $white !default;
