--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,5 +19,6 @@
 @import "../component/Footer/Footer.scss";
 @import "../component/Navbar/Navbar.scss";
 @import "../component/ArticleCard/ArticleCard.scss"; 
+@import "../page/AccessPage/AccessPage.scss"
 @import "../page/BlogPage/CreatePostModal.scss";
 @import "../page//BlogPage/TestArticlePage.scss";
