--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,6 +28,7 @@
 @import "../component/BlogPageArticleCard/Blog_ArticleCard.scss";
 @import "../component/AdminArticleCard/Admin_ArticleCard.scss";
 @import "../component/ArticleCard/ArticleCard.scss";
+@import "../component/CommentBox/CommentBox.scss";
 @import "../page/AccessPage/AccessPage.scss";
 @import "../page/BlogPage/CreatePostModal.scss";
 @import "../page//BlogPage/TestArticlePage.scss";
