--- a/src/page/AccessPage/AccessPage.scss
+++ b/src/page/AccessPage/AccessPage.scss
@@ -10,7 +10,7 @@
 }
 
 .login-card{
-    padding: 30px 30px 50px 30px;
+    padding: 30px 30px 40px 30px;
 
 }
 .mb-10{
@@ -31,7 +31,7 @@
     color: #FBA44D;
 }
 
-.login-btn{
+.login-btn-close{
     position: absolute;
     top: 5%;
     left: 86%;
