--- a/src/page/ArticleListPage/ArticleListPage.scss
+++ b/src/page/ArticleListPage/ArticleListPage.scss
@@ -151,8 +151,9 @@
 }
 .article-list-card {
   .card-img {
+    aspect-ratio: 2 / 1;
     @include media-breakpoint-up(md) {
-      height: 100%;
+      height: 133px;
       width: 266px;
     }
   }
