--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -1,9 +1,9 @@
 .navbar {
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   @include media-breakpoint-up(lg) {
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 }
 .search-bar {
@@ -40,6 +40,12 @@
     color: $light;
   }
 }
+
+.homepage-collapse {
+  transition: height 0.3s ease;
+  overflow: hidden;
+}
+
 .avatar {
   width: 35px;
   height: 35px;
