先上傳新增文章modal改版 編輯文章跟編輯封面圖還需要改動

--- a/src/page/BlogPage/CreatePostModal.scss
+++ b/src/page/BlogPage/CreatePostModal.scss
@@ -3,18 +3,22 @@
     overflow-y: auto; /* 讓內部文字區域滾動 */
 }
 
-.quill-editor {
-    min-height: 300px;
+.ql-editor {
+    min-height: 200px;
     max-height: 350px; /* 限制最大高度 */
-    overflow-y: auto; /* 讓內部文字區域滾動 */
+    overflow-y: auto !important;  /* 讓內部文字區域滾動 */
 }
 
-.ql-tooltip {
-    position: relative !important;
-    max-width: 310px !important;  /* 避免 tooltip 過寬被切掉 */
-    left: auto  !important;
-    top: auto !important;
+// .ql-tooltip {
+//     position: relative !important;
+//     max-width: 310px !important;  /* 避免 tooltip 過寬被切掉 */
+//     left: auto  !important;
+//     top: auto !important;
     
+// }
+
+.ql-formats{
+   margin-right: 5px !important;
 }
 
 
