--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,6 +29,8 @@
 @import "../component/AdminArticleCard/Admin_ArticleCard.scss";
 @import "../component/ArticleCard/ArticleCard.scss";
 @import "../component/CommentBox/CommentBox.scss";
+@import "../component/SubscriptionCard/SubscriptionHistoryCard.scss";
+@import "../page/AdminPage/AdminSubscription.scss";
 @import "../page/AccessPage/AccessPage.scss";
 @import "../page/BlogPage/CreatePostModal.scss";
 @import "../page//BlogPage/TestArticlePage.scss";
