fix login to home bug fix sign up error add login motion

--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -12,3 +12,10 @@
   background-color: $primary_hover;
   border-color: $primary_hover;
 }
+
+//按鈕hover浮起
+.hover-shadow:hover {
+  transform: translateY(-1px);
+  box-shadow: 0.2rem 0.2rem 0.75rem rgba(#c18700, 0.15);
+  transition: all 0.2s ease-in-out;
+}
