--- a/src/page/HomePage/HomePage.scss
+++ b/src/page/HomePage/HomePage.scss
@@ -27,7 +27,7 @@
   bottom: 0%;
   width: 100%;
 
-  // padding: 20px 12px 48px 0px;
+  padding: 20px 12px 48px;
   background: linear-gradient(rgba(231, 118, 5, 0), rgba(231, 118, 5, 0.6));
 
   @include media-breakpoint-up(lg) {
