--- a/src/component/BlogPageArticleCard/Blog_ArticleCard.scss
+++ b/src/component/BlogPageArticleCard/Blog_ArticleCard.scss
@@ -1,8 +1,16 @@
+@import "../../style/variables";  // 確保變數被載入
+
 .blog_articleCard {
   .material-symbols-outlined {
     font-variation-settings: "FILL" 1;
   }
   .dropdown-menu {
     min-width: auto;
+  }
+}
+
+.blog-card-link{
+  &:hover{
+    color: $primary_hover !important; // 使用 SCSS 變數
   }
 }
