--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -19,3 +19,12 @@
   box-shadow: 0.2rem 0.2rem 0.75rem rgba(#c18700, 0.15);
   transition: all 0.2s ease-in-out;
 }
+
+  .btn-click {
+    transition: transform 0.1s ease-out;
+  }
+  
+  .btn-click:active {
+    transform: scale(0.95);
+  }
+  
