--- a/src/component/SponsorModal/SponsorModal.scss
+++ b/src/component/SponsorModal/SponsorModal.scss
@@ -1,10 +1,10 @@
 .sponsor-btn {
     display: flex;
     align-items: center;
-    gap: 8px;
-    padding: 8px 16px;
+    // gap: 8px;
+    // padding: 8px 16px;
     transition: all 0.3s ease;
-    width: 70px;
+    // width: 70px;
   }
 
 .sponsor-btn{
@@ -31,4 +31,9 @@
 
 .sponsor-modal{
   z-index: 1090;
+}
+
+.small-btn {
+  padding: 0.3rem 0.1rem;
+  font-size: 0.75rem;
 }
