--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -26,6 +26,7 @@
 @import "../page/AdminPage/AdminBackground.scss";
 @import "../page/BlogPage/BlogHome.scss";
 @import "../component/BlogPageArticleCard/Blog_ArticleCard.scss";
+@import "../component/BlogPageCommentReply/Blog_CommentReply.scss";
 @import "../component/AdminArticleCard/Admin_ArticleCard.scss";
 @import "../component/ArticleCard/ArticleCard.scss";
 @import "../component/CommentBox/CommentBox.scss";
