--- a/src/page/ArticleListPage/ArticleListPage.scss
+++ b/src/page/ArticleListPage/ArticleListPage.scss
@@ -33,6 +33,10 @@
 }
 .hot-article-card {
   .card {
+    &:hover{
+      transition: 0.2s;
+      background-color: $secondary;
+    }
     padding: 10px;
     @include media-breakpoint-up(md) {
       padding: 20px;
@@ -54,6 +58,7 @@
     }
   }
   .card-footer {
+    background-color:transparent;
     font-size: 8px;
     @include media-breakpoint-up(lg) {
       font-size: 16px;
@@ -92,6 +97,11 @@
   }
 }
 .recommend-article-card {
+  background-color: $light;
+  &:hover{
+    transition: 0.2s;
+    background-color: $secondary;
+  }
   .card-img {
     height: 84px;
     width: 84px;
