--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,3 +34,4 @@
 @import "../page/AdminPage/AdminSubscription.scss";
 @import "../page/AccessPage/AccessPage.scss";
 @import "../page/BlogPage/CreatePostModal.scss";
+@import "../component/ArticlePagination/ArticlePagination.scss"
