--- a/src/page/AdminPage/AdminLayout/AdminLayout.scss
+++ b/src/page/AdminPage/AdminLayout/AdminLayout.scss
@@ -3,7 +3,7 @@
   font-weight: 700 !important;
   color: #e77605 !important;
   border-bottom: solid 2px #e77605;
-  @media (min-width: 768px) {
+  @include media-breakpoint-up(md){
     font-weight: 400 !important;
     border: none;
   }
