--- a/src/page/BlogPage/BlogHome.scss
+++ b/src/page/BlogPage/BlogHome.scss
@@ -14,7 +14,7 @@
   z-index: 999;
   bottom: clamp(16px, 5vw, 48px);
   right: clamp(16px, 5vw, 48px);
-  @media (max-width: 1200px) {
+  @include media-breakpoint-down(xl){
     right: 10px;
   }
   a {
@@ -39,13 +39,13 @@
     // background:#FDFBF5;
     background: #00000026;
   }
-  @media (min-width: 768px) {
+  @include media-breakpoint-up(md){
     padding-top: clamp(40px, 10vw, 205px) !important;
   }
 }
 .articleList_header button {
   width: 100%;
-  @media (min-width: 768px) {
+  @include media-breakpoint-up(md){
     width: 162px;
   }
 }
@@ -55,7 +55,7 @@
   background-repeat: no-repeat;
   background-position: right 1rem center;
   background-size: 20px;
-  @media (min-width: 768px) {
+  @include media-breakpoint-up(md){
     width: 176px;
   }
 }
