Verify scss file naming convention

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,4 +34,8 @@
 @import "../page/AdminPage/AdminSubscription.scss";
 @import "../page/AccessPage/AccessPage.scss";
 @import "../page/BlogPage/CreatePostModal.scss";
-@import "../component/ArticlePagination/ArticlePagination.scss"
+@import "../component/ArticlePagination/ArticlePagination.scss";
+@import "../component/ReviewCard/ReviewCard.scss";
+@import "../component/SponsorModal/SponsorModal.scss";
+
+
